# rag-br

./: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
configs/: index_config.yaml  ingest_config.yaml
docs/refs/: architecture.md  colab_reference.md  crisp_dm.md  datasets_description.md  project_structure.md
docs/study_reports/: 1_business_understanding.md  2_data_presentation.md
notebooks/: 01_data_understanding.ipynb  02_preprocessing.ipynb  03_embeddings_index.ipynb
scripts/: build_index.py  ingest.py
src/api/: main.py
src/api/core/: lifespan.py  settings.py
src/api/dependencies/: index_service.py  query_service.py  vector_index.py
src/api/routes/: health.py  index.py  query.py  rag.py
src/api/schemas/: health.py  index.py  query.py  rag.py
src/api/services/: index.py  query.py
src/ingest/: __init__.py  load_dataset.py  preprocess.py
src/ingestion/: __init__.py  load_dataset.py  preprocess.py
src/utils/: logger.py
src/vectorize/: chunking.py  config.py  embed.py  vector_index.py  vector_store.py
