[project]
name = "rag-br"
version = "0.1.0"
description = "Sistema de Recuperação, Reranking e Resposta Baseada em Documentos em Português com Modelo de Reranking Treinado"
authors = [
    { name = "Alexandre Oliveira" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "datasets<4.0.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "qdrant-client>=1.16.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 88 # Tamanho máximo da linha (padrão Black)
target-version = "py312" # Versão alvo do seu Python

[tool.ruff.lint]
# "E", "F" são básicos. "I" organiza imports. "UP" moderniza código. "B" detecta bugs comuns.
select = ["E", "F", "I"] 
ignore = ["E501"] # Ignora aviso de linha longa se o formatador já resolve

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
